--- a/Template.html
+++ b/Template.html
@@ -347,7 +347,7 @@
                 <div class="article-meta">
                     <span>Date：2025.11.30</span>
                     <span>Auther：awumiao2025</span>
-                    <span>classification：Template</span>
+                    <span>Classification：Template</span>
                 </div>
             </header>
             
@@ -429,4 +429,5 @@ function example() {
         </div>
     </footer>
 </body>
+
 </html>
