更改语言为中文

--- a/Template.html
+++ b/Template.html
@@ -335,7 +335,7 @@
 <body>
     <header>
         <div class="container header-container">
-            <a href="/" class="logo">My <span>Blog</span></a>
+            <a href="/" class="logo">我的<span>博客</span></a>
         </div>
     </header>
 
@@ -345,15 +345,15 @@
             <header class="article-header">
                 <h1 class="article-title">Title</h1>
                 <div class="article-meta">
-                    <span>Date：2025.11.30</span>
-                    <span>Auther：awumiao2025</span>
-                    <span>Classification：Template</span>
+                    <span>日期：2025.11.30</span>
+                    <span>作者：曾庆光</span>
+                    <span>分类：模板</span>
                 </div>
             </header>
             
             <div class="article-content">
                 <!-- 文章内容 -->
-                <p>这里是文章内容区域。（憋不出来英文了！！！）</p>
+                <p>这里是文章内容区域。</p>
                 
                 <h2>二级标题示例</h2>
                 <p>这是一个段落示例。</p>
@@ -424,7 +424,7 @@ function example() {
                 </div>
             </div>
             <div class="copyright">
-                &copy; 2025 awumiao2025
+                &copy; 2025 曾庆光
             </div>
         </div>
     </footer>
