--- a/Template.html
+++ b/Template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template | awumiao2025's blog</title>
+    <title>模板 | 曾庆光的博客</title>
     <style>
         * {
             margin: 0;
